SFDCProject/src/objects/Contact_Mode_Rel__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Contact__r.Account.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Site__c</fullName>
        <formula>Contact__r.Account.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Mode__c</fullName>
        <formula>IF(Partner_Modes__r.Deleted__c, &apos;NO&apos;, &apos;YES&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Selling Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact__r.Contact_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Mode_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode_Id__c</fullName>
        <formula>Partner_Modes__r.Mode_Id__c</formula>
        <label>Selling Territory Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_Name__c</fullName>
        <formula>Partner_Modes__r.Mode_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Modes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Selling Territory</label>
        <referenceTo>Partner_Modes__c</referenceTo>
        <relationshipLabel>Contact Selling Territory Relationships</relationshipLabel>
        <relationshipName>Contact_Mode_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <formula>IF(ISBLANK(Status_Code__c), &apos;&apos;, IF(Contains(UPPER(Status_Code__c), &apos;SUCCESS&apos;), &apos;SUCCESS&apos;, &apos;ERROR&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <formula>Contact__r.Ultimate_Parent_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <label>Contact Selling Territory Relationship</label>
    <nameField>
        <label>Contact Selling Territory Relationship</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Selling Territory Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>